hw-2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-homework-deployment
  labels:
    app: otus-homework
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otus-homework
  template:
    metadata:
      labels:
        app: otus-homework
    spec:
      containers:
      - name: homework
        image: olegmeditskiy96/spring-boot-homework:1.0
        ports:
          - containerPort: 8000
